--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "copyfiles": "^2.4.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
     "dev": "ts-node ./src/index.ts",
-    "build": "tsc",
+    "build": "tsc && yarn copyfiles ./public/** ./dist",
     "start": "node ./dist/index.js"
   },
   "dependencies": {
