--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/sqlite3": "^3.1.8",
     "copyfiles": "^2.4.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
@@ -20,6 +21,7 @@
   "dependencies": {
     "@types/node": "^17.0.18",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "sqlite3": "^5.0.2"
   }
 }
